@@ -6,3 +6,4 @@ DIST mplayer2-2.0_p20120815.tar.xz 1730208 SHA256 149bbd0f99c4d842098d7f849ca92f
 DIST mplayer2-2.0_p20120828.tar.xz 1731288 SHA256 d2ef6482b18232472188652f1ecae2604ec09460d135557a14fa6f7092454b14 SHA512 0239644d9eb1effd342034824efac2c62e36750fdda2b7af4e30cfc3ac09bfe11fce8966275b72fc2f53635fc3dc285c0278e0e1eb2f95947e9e8a53cf619f00 WHIRLPOOL 8d3f533b34cf621399a66e4e1f2c94f99886520bdf04f6bfd52823b3dff3e7075412362dd19bfd02634178c202d16199cd297747c523359a1d0c5c4ccd349c15
 DIST mplayer2-2.0_p20121103.tar.xz 1549180 SHA256 08f7b3e69565314613204f8c40a4c8ac5f4fe85bbe6ca38d06ee970415a9b36e SHA512 ae7b8f3616cb11e86fe6d956a296b475ad64c8637fca47d5a1a42236be9b05f49af5536e94572d3b21f75322f4730b8df3e2e120991ad772bbe4981fb29bcb77 WHIRLPOOL 28b941e30e64baf86e15f8bc968e1487bc64537da6cd3163aeaa2cd05228e55085f898fad52fa88a872de38f6248009813b78aaae08cea0c91fbda85fdabaf1f
 DIST mplayer2-2.0_p20121108.tar.xz 1549508 SHA256 7d0f18998b6b059e1e06d66d030e5c4979aff158f050d7354c3056e6aaf29c0d SHA512 b8e507aa7e928267f648f228c1fafc236c0af39836733c0029583250784462a87cd713ba86312329c8c4c6cb175dcae24e2064498ddc6d51b162da51c43a8646 WHIRLPOOL bc0fd93ee2a56095bdad81aef9997e48cb177569a47c5abd5bace58af2a8eb114c352abadea2306437b5650d85f549109ad2173491b833d211e5dc816c7f7dd0
+DIST mplayer2-2.0_p20121128.tar.xz 1932656 SHA256 17ec9fadb59c74dc4852df2d1c49d3d551a4d5b38eb50fc6c7c24b0e24d0df57 SHA512 8a7cedbdbfccc8f4777de8de3f1a6388495157b596bbf88982382278d073b7fcf80c8f27319e222d89323162f3522ac90e3a150f2922350b6138ca0a4ba7bfc8 WHIRLPOOL 238bab7b78f0852d283d57b048bcb737aec9ad215d5e3e4cee244ee2bfea5315c8b93925306ea8a7c62c02fe10689e9d6a5fe1d4f52e3e4f518e59f120a0ea83
